# ShortcutEditor

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md  ShortcutEditorInfo.plist  build  compile_commands.json
NSPatch/: NSGuiDefines.h  NSPatch.h  NSWindow+SetIsVisible.h  nspatch.md
Source/: AppDelegate.h  AppDelegate.m  ShortcutEditor.h  ShortcutEditor.m  main.m
cmake/GNUstep/: FindGNUstep.cmake
